learn-release1.0/vine-compare/ocaml-4.01.0/otherlibs/labltk/compiler/parser.output
   0  $accept : %entry% $end

   1  TypeName : IDENT
   2           | WIDGET

   3  Type0 : TYINT
   4        | TYFLOAT
   5        | TYBOOL
   6        | TYCHAR
   7        | TYSTRING
   8        | TypeName

   9  Type0_5 : Type0 SLASH Type0
  10          | Type0

  11  Type1 : Type0_5
  12        | TypeName LPAREN IDENT RPAREN
  13        | WIDGET LPAREN IDENT RPAREN
  14        | OPTION LPAREN IDENT RPAREN
  15        | Type1 AS STRING
  16        | LBRACE Type_list RBRACE

  17  Type2 : Type1
  18        | Type2 LIST

  19  Labeled_type2 : Type2
  20                | IDENT COLON Type2

  21  Type_list : Type2 COMMA Type_list
  22            | Type2

  23  Type_record : Labeled_type2 COMMA Type_record
  24              | Labeled_type2

  25  FType : LPAREN RPAREN
  26        | LPAREN Type2 RPAREN
  27        | LPAREN Type_record RPAREN

  28  Type : Type2
  29       | FUNCTION FType

  30  SimpleArg : STRING
  31            | Type

  32  Arg : STRING
  33      | Type
  34      | IDENT COLON Type
  35      | QUESTION IDENT COLON LBRACKET SimpleArgList RBRACKET DefaultList
  36      | QUESTION WIDGET COLON LBRACKET SimpleArgList RBRACKET DefaultList
  37      | QUESTION IDENT COLON LBRACKET SimpleArgList RBRACKET
  38      | QUESTION WIDGET COLON LBRACKET SimpleArgList RBRACKET
  39      | WIDGET COLON Type
  40      | Template

  41  SimpleArgList : SimpleArg SEMICOLON SimpleArgList
  42                | SimpleArg

  43  ArgList : Arg SEMICOLON ArgList
  44          | Arg

  45  DefaultList : LBRACKET LBRACE ArgList RBRACE RBRACKET

  46  Template : LBRACKET ArgList RBRACKET

  47  Constructor : IDENT Template
  48              | IDENT LPAREN IDENT RPAREN Template

  49  AbbrevConstructor : Constructor
  50                    | IDENT

  51  Constructors : Constructor Constructors
  52               | Constructor

  53  AbbrevConstructors : AbbrevConstructor AbbrevConstructors
  54                     | AbbrevConstructor

  55  Safe :
  56       | UNSAFE

  57  Command : Safe FUNCTION FType IDENT Template

  58  External : Safe EXTERNAL IDENT STRING

  59  Option : OPTION IDENT Template
  60         | OPTION IDENT LPAREN IDENT RPAREN Template
  61         | OPTION IDENT

  62  WidgetComponents :
  63                   | Command WidgetComponents
  64                   | Option WidgetComponents
  65                   | External WidgetComponents

  66  ModuleComponents :
  67                   | Command ModuleComponents
  68                   | External ModuleComponents

  69  ParserArity :
  70              | SEQUENCE

  71  entry : TYPE ParserArity TypeName LBRACE Constructors RBRACE
  72        | VARIANT TYPE ParserArity TypeName LBRACE Constructors RBRACE
  73        | TYPE ParserArity TypeName EXTERNAL
  74        | SUBTYPE ParserArity OPTION LPAREN IDENT RPAREN LBRACE AbbrevConstructors RBRACE
  75        | SUBTYPE ParserArity TypeName LPAREN IDENT RPAREN LBRACE AbbrevConstructors RBRACE
  76        | Command
  77        | WIDGET IDENT LBRACE WidgetComponents RBRACE
  78        | MODULE IDENT LBRACE ModuleComponents RBRACE
  79        | EOF

  80  %entry% : '\001' entry

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . entry  (80)
	Safe : .  (55)

	EOF  shift 3
	VARIANT  shift 4
	WIDGET  shift 5
	TYPE  shift 6
	SUBTYPE  shift 7
	MODULE  shift 8
	UNSAFE  shift 9
	FUNCTION  reduce 55

	entry  goto 10
	Safe  goto 11
	Command  goto 12


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	entry : EOF .  (79)

	.  reduce 79


state 4
	entry : VARIANT . TYPE ParserArity TypeName LBRACE Constructors RBRACE  (72)

	TYPE  shift 13
	.  error


state 5
	entry : WIDGET . IDENT LBRACE WidgetComponents RBRACE  (77)

	IDENT  shift 14
	.  error


state 6
	entry : TYPE . ParserArity TypeName LBRACE Constructors RBRACE  (71)
	entry : TYPE . ParserArity TypeName EXTERNAL  (73)
	ParserArity : .  (69)

	SEQUENCE  shift 15
	IDENT  reduce 69
	WIDGET  reduce 69

	ParserArity  goto 16


state 7
	entry : SUBTYPE . ParserArity OPTION LPAREN IDENT RPAREN LBRACE AbbrevConstructors RBRACE  (74)
	entry : SUBTYPE . ParserArity TypeName LPAREN IDENT RPAREN LBRACE AbbrevConstructors RBRACE  (75)
	ParserArity : .  (69)

	SEQUENCE  shift 15
	IDENT  reduce 69
	WIDGET  reduce 69
	OPTION  reduce 69

	ParserArity  goto 17


state 8
	entry : MODULE . IDENT LBRACE ModuleComponents RBRACE  (78)

	IDENT  shift 18
	.  error


state 9
	Safe : UNSAFE .  (56)

	.  reduce 56


state 10
	%entry% : '\001' entry .  (80)

	.  reduce 80


state 11
	Command : Safe . FUNCTION FType IDENT Template  (57)

	FUNCTION  shift 19
	.  error


state 12
	entry : Command .  (76)

	.  reduce 76


state 13
	entry : VARIANT TYPE . ParserArity TypeName LBRACE Constructors RBRACE  (72)
	ParserArity : .  (69)

	SEQUENCE  shift 15
	IDENT  reduce 69
	WIDGET  reduce 69

	ParserArity  goto 20


state 14
	entry : WIDGET IDENT . LBRACE WidgetComponents RBRACE  (77)

	LBRACE  shift 21
	.  error


state 15
	ParserArity : SEQUENCE .  (70)

	.  reduce 70


state 16
	entry : TYPE ParserArity . TypeName LBRACE Constructors RBRACE  (71)
	entry : TYPE ParserArity . TypeName EXTERNAL  (73)

	IDENT  shift 22
	WIDGET  shift 23
	.  error

	TypeName  goto 24


state 17
	entry : SUBTYPE ParserArity . OPTION LPAREN IDENT RPAREN LBRACE AbbrevConstructors RBRACE  (74)
	entry : SUBTYPE ParserArity . TypeName LPAREN IDENT RPAREN LBRACE AbbrevConstructors RBRACE  (75)

	IDENT  shift 22
	WIDGET  shift 23
	OPTION  shift 25
	.  error

	TypeName  goto 26


state 18
	entry : MODULE IDENT . LBRACE ModuleComponents RBRACE  (78)

	LBRACE  shift 27
	.  error


state 19
	Command : Safe FUNCTION . FType IDENT Template  (57)

	LPAREN  shift 28
	.  error

	FType  goto 29


state 20
	entry : VARIANT TYPE ParserArity . TypeName LBRACE Constructors RBRACE  (72)

	IDENT  shift 22
	WIDGET  shift 23
	.  error

	TypeName  goto 30


state 21
	entry : WIDGET IDENT LBRACE . WidgetComponents RBRACE  (77)
	Safe : .  (55)
	WidgetComponents : .  (62)

	OPTION  shift 31
	UNSAFE  shift 9
	RBRACE  reduce 62
	FUNCTION  reduce 55
	EXTERNAL  reduce 55

	Safe  goto 32
	Command  goto 33
	External  goto 34
	Option  goto 35
	WidgetComponents  goto 36


state 22
	TypeName : IDENT .  (1)

	.  reduce 1


state 23
	TypeName : WIDGET .  (2)

	.  reduce 2


state 24
	entry : TYPE ParserArity TypeName . LBRACE Constructors RBRACE  (71)
	entry : TYPE ParserArity TypeName . EXTERNAL  (73)

	LBRACE  shift 37
	EXTERNAL  shift 38
	.  error


state 25
	entry : SUBTYPE ParserArity OPTION . LPAREN IDENT RPAREN LBRACE AbbrevConstructors RBRACE  (74)

	LPAREN  shift 39
	.  error


state 26
	entry : SUBTYPE ParserArity TypeName . LPAREN IDENT RPAREN LBRACE AbbrevConstructors RBRACE  (75)

	LPAREN  shift 40
	.  error


state 27
	entry : MODULE IDENT LBRACE . ModuleComponents RBRACE  (78)
	Safe : .  (55)
	ModuleComponents : .  (66)

	UNSAFE  shift 9
	RBRACE  reduce 66
	FUNCTION  reduce 55
	EXTERNAL  reduce 55

	Safe  goto 32
	Command  goto 41
	External  goto 42
	ModuleComponents  goto 43


state 28
	FType : LPAREN . RPAREN  (25)
	FType : LPAREN . Type2 RPAREN  (26)
	FType : LPAREN . Type_record RPAREN  (27)

	IDENT  shift 44
	RPAREN  shift 45
	LBRACE  shift 46
	TYINT  shift 47
	TYFLOAT  shift 48
	TYBOOL  shift 49
	TYCHAR  shift 50
	TYSTRING  shift 51
	WIDGET  shift 52
	OPTION  shift 53
	.  error

	TypeName  goto 54
	Type0  goto 55
	Type0_5  goto 56
	Type1  goto 57
	Type2  goto 58
	Labeled_type2  goto 59
	Type_record  goto 60


state 29
	Command : Safe FUNCTION FType . IDENT Template  (57)

	IDENT  shift 61
	.  error


state 30
	entry : VARIANT TYPE ParserArity TypeName . LBRACE Constructors RBRACE  (72)

	LBRACE  shift 62
	.  error


state 31
	Option : OPTION . IDENT Template  (59)
	Option : OPTION . IDENT LPAREN IDENT RPAREN Template  (60)
	Option : OPTION . IDENT  (61)

	IDENT  shift 63
	.  error


state 32
	Command : Safe . FUNCTION FType IDENT Template  (57)
	External : Safe . EXTERNAL IDENT STRING  (58)

	FUNCTION  shift 19
	EXTERNAL  shift 64
	.  error


state 33
	WidgetComponents : Command . WidgetComponents  (63)
	Safe : .  (55)
	WidgetComponents : .  (62)

	OPTION  shift 31
	UNSAFE  shift 9
	RBRACE  reduce 62
	FUNCTION  reduce 55
	EXTERNAL  reduce 55

	Safe  goto 32
	Command  goto 33
	External  goto 34
	Option  goto 35
	WidgetComponents  goto 65


state 34
	WidgetComponents : External . WidgetComponents  (65)
	Safe : .  (55)
	WidgetComponents : .  (62)

	OPTION  shift 31
	UNSAFE  shift 9
	RBRACE  reduce 62
	FUNCTION  reduce 55
	EXTERNAL  reduce 55

	Safe  goto 32
	Command  goto 33
	External  goto 34
	Option  goto 35
	WidgetComponents  goto 66


state 35
	WidgetComponents : Option . WidgetComponents  (64)
	Safe : .  (55)
	WidgetComponents : .  (62)

	OPTION  shift 31
	UNSAFE  shift 9
	RBRACE  reduce 62
	FUNCTION  reduce 55
	EXTERNAL  reduce 55

	Safe  goto 32
	Command  goto 33
	External  goto 34
	Option  goto 35
	WidgetComponents  goto 67


state 36
	entry : WIDGET IDENT LBRACE WidgetComponents . RBRACE  (77)

	RBRACE  shift 68
	.  error


state 37
	entry : TYPE ParserArity TypeName LBRACE . Constructors RBRACE  (71)

	IDENT  shift 69
	.  error

	Constructor  goto 70
	Constructors  goto 71


state 38
	entry : TYPE ParserArity TypeName EXTERNAL .  (73)

	.  reduce 73


state 39
	entry : SUBTYPE ParserArity OPTION LPAREN . IDENT RPAREN LBRACE AbbrevConstructors RBRACE  (74)

	IDENT  shift 72
	.  error


state 40
	entry : SUBTYPE ParserArity TypeName LPAREN . IDENT RPAREN LBRACE AbbrevConstructors RBRACE  (75)

	IDENT  shift 73
	.  error


state 41
	ModuleComponents : Command . ModuleComponents  (67)
	Safe : .  (55)
	ModuleComponents : .  (66)

	UNSAFE  shift 9
	RBRACE  reduce 66
	FUNCTION  reduce 55
	EXTERNAL  reduce 55

	Safe  goto 32
	Command  goto 41
	External  goto 42
	ModuleComponents  goto 74


state 42
	ModuleComponents : External . ModuleComponents  (68)
	Safe : .  (55)
	ModuleComponents : .  (66)

	UNSAFE  shift 9
	RBRACE  reduce 66
	FUNCTION  reduce 55
	EXTERNAL  reduce 55

	Safe  goto 32
	Command  goto 41
	External  goto 42
	ModuleComponents  goto 75


state 43
	entry : MODULE IDENT LBRACE ModuleComponents . RBRACE  (78)

	RBRACE  shift 76
	.  error


state 44
	TypeName : IDENT .  (1)
	Labeled_type2 : IDENT . COLON Type2  (20)

	COLON  shift 77
	LPAREN  reduce 1
	RPAREN  reduce 1
	COMMA  reduce 1
	SLASH  reduce 1
	LIST  reduce 1
	AS  reduce 1


state 45
	FType : LPAREN RPAREN .  (25)

	.  reduce 25


state 46
	Type1 : LBRACE . Type_list RBRACE  (16)

	IDENT  shift 22
	LBRACE  shift 46
	TYINT  shift 47
	TYFLOAT  shift 48
	TYBOOL  shift 49
	TYCHAR  shift 50
	TYSTRING  shift 51
	WIDGET  shift 52
	OPTION  shift 53
	.  error

	TypeName  goto 54
	Type0  goto 55
	Type0_5  goto 56
	Type1  goto 57
	Type_list  goto 78
	Type2  goto 79


state 47
	Type0 : TYINT .  (3)

	.  reduce 3


state 48
	Type0 : TYFLOAT .  (4)

	.  reduce 4


state 49
	Type0 : TYBOOL .  (5)

	.  reduce 5


state 50
	Type0 : TYCHAR .  (6)

	.  reduce 6


state 51
	Type0 : TYSTRING .  (7)

	.  reduce 7


52: shift/reduce conflict (shift 80, reduce 2) on LPAREN
state 52
	TypeName : WIDGET .  (2)
	Type1 : WIDGET . LPAREN IDENT RPAREN  (13)

	LPAREN  shift 80
	RPAREN  reduce 2
	COMMA  reduce 2
	SEMICOLON  reduce 2
	RBRACKET  reduce 2
	RBRACE  reduce 2
	SLASH  reduce 2
	LIST  reduce 2
	AS  reduce 2


state 53
	Type1 : OPTION . LPAREN IDENT RPAREN  (14)

	LPAREN  shift 81
	.  error


state 54
	Type0 : TypeName .  (8)
	Type1 : TypeName . LPAREN IDENT RPAREN  (12)

	LPAREN  shift 82
	RPAREN  reduce 8
	COMMA  reduce 8
	SEMICOLON  reduce 8
	RBRACKET  reduce 8
	RBRACE  reduce 8
	SLASH  reduce 8
	LIST  reduce 8
	AS  reduce 8


state 55
	Type0_5 : Type0 . SLASH Type0  (9)
	Type0_5 : Type0 .  (10)

	SLASH  shift 83
	RPAREN  reduce 10
	COMMA  reduce 10
	SEMICOLON  reduce 10
	RBRACKET  reduce 10
	RBRACE  reduce 10
	LIST  reduce 10
	AS  reduce 10


state 56
	Type1 : Type0_5 .  (11)

	.  reduce 11


state 57
	Type1 : Type1 . AS STRING  (15)
	Type2 : Type1 .  (17)

	AS  shift 84
	RPAREN  reduce 17
	COMMA  reduce 17
	SEMICOLON  reduce 17
	RBRACKET  reduce 17
	RBRACE  reduce 17
	LIST  reduce 17


58: shift/reduce conflict (shift 85, reduce 19) on RPAREN
state 58
	Type2 : Type2 . LIST  (18)
	Labeled_type2 : Type2 .  (19)
	FType : LPAREN Type2 . RPAREN  (26)

	RPAREN  shift 85
	LIST  shift 86
	COMMA  reduce 19


state 59
	Type_record : Labeled_type2 . COMMA Type_record  (23)
	Type_record : Labeled_type2 .  (24)

	COMMA  shift 87
	RPAREN  reduce 24


state 60
	FType : LPAREN Type_record . RPAREN  (27)

	RPAREN  shift 88
	.  error


state 61
	Command : Safe FUNCTION FType IDENT . Template  (57)

	LBRACKET  shift 89
	.  error

	Template  goto 90


state 62
	entry : VARIANT TYPE ParserArity TypeName LBRACE . Constructors RBRACE  (72)

	IDENT  shift 69
	.  error

	Constructor  goto 70
	Constructors  goto 91


state 63
	Option : OPTION IDENT . Template  (59)
	Option : OPTION IDENT . LPAREN IDENT RPAREN Template  (60)
	Option : OPTION IDENT .  (61)

	LPAREN  shift 92
	LBRACKET  shift 89
	RBRACE  reduce 61
	OPTION  reduce 61
	FUNCTION  reduce 61
	EXTERNAL  reduce 61
	UNSAFE  reduce 61

	Template  goto 93


state 64
	External : Safe EXTERNAL . IDENT STRING  (58)

	IDENT  shift 94
	.  error


state 65
	WidgetComponents : Command WidgetComponents .  (63)

	.  reduce 63


state 66
	WidgetComponents : External WidgetComponents .  (65)

	.  reduce 65


state 67
	WidgetComponents : Option WidgetComponents .  (64)

	.  reduce 64


state 68
	entry : WIDGET IDENT LBRACE WidgetComponents RBRACE .  (77)

	.  reduce 77


state 69
	Constructor : IDENT . Template  (47)
	Constructor : IDENT . LPAREN IDENT RPAREN Template  (48)

	LPAREN  shift 95
	LBRACKET  shift 89
	.  error

	Template  goto 96


state 70
	Constructors : Constructor . Constructors  (51)
	Constructors : Constructor .  (52)

	IDENT  shift 69
	RBRACE  reduce 52

	Constructor  goto 70
	Constructors  goto 97


state 71
	entry : TYPE ParserArity TypeName LBRACE Constructors . RBRACE  (71)

	RBRACE  shift 98
	.  error


state 72
	entry : SUBTYPE ParserArity OPTION LPAREN IDENT . RPAREN LBRACE AbbrevConstructors RBRACE  (74)

	RPAREN  shift 99
	.  error


state 73
	entry : SUBTYPE ParserArity TypeName LPAREN IDENT . RPAREN LBRACE AbbrevConstructors RBRACE  (75)

	RPAREN  shift 100
	.  error


state 74
	ModuleComponents : Command ModuleComponents .  (67)

	.  reduce 67


state 75
	ModuleComponents : External ModuleComponents .  (68)

	.  reduce 68


state 76
	entry : MODULE IDENT LBRACE ModuleComponents RBRACE .  (78)

	.  reduce 78


state 77
	Labeled_type2 : IDENT COLON . Type2  (20)

	IDENT  shift 22
	LBRACE  shift 46
	TYINT  shift 47
	TYFLOAT  shift 48
	TYBOOL  shift 49
	TYCHAR  shift 50
	TYSTRING  shift 51
	WIDGET  shift 52
	OPTION  shift 53
	.  error

	TypeName  goto 54
	Type0  goto 55
	Type0_5  goto 56
	Type1  goto 57
	Type2  goto 101


state 78
	Type1 : LBRACE Type_list . RBRACE  (16)

	RBRACE  shift 102
	.  error


state 79
	Type2 : Type2 . LIST  (18)
	Type_list : Type2 . COMMA Type_list  (21)
	Type_list : Type2 .  (22)

	COMMA  shift 103
	LIST  shift 86
	RBRACE  reduce 22


state 80
	Type1 : WIDGET LPAREN . IDENT RPAREN  (13)

	IDENT  shift 104
	.  error


state 81
	Type1 : OPTION LPAREN . IDENT RPAREN  (14)

	IDENT  shift 105
	.  error


state 82
	Type1 : TypeName LPAREN . IDENT RPAREN  (12)

	IDENT  shift 106
	.  error


state 83
	Type0_5 : Type0 SLASH . Type0  (9)

	IDENT  shift 22
	TYINT  shift 47
	TYFLOAT  shift 48
	TYBOOL  shift 49
	TYCHAR  shift 50
	TYSTRING  shift 51
	WIDGET  shift 23
	.  error

	TypeName  goto 107
	Type0  goto 108


state 84
	Type1 : Type1 AS . STRING  (15)

	STRING  shift 109
	.  error


state 85
	FType : LPAREN Type2 RPAREN .  (26)

	.  reduce 26


state 86
	Type2 : Type2 LIST .  (18)

	.  reduce 18


state 87
	Type_record : Labeled_type2 COMMA . Type_record  (23)

	IDENT  shift 44
	LBRACE  shift 46
	TYINT  shift 47
	TYFLOAT  shift 48
	TYBOOL  shift 49
	TYCHAR  shift 50
	TYSTRING  shift 51
	WIDGET  shift 52
	OPTION  shift 53
	.  error

	TypeName  goto 54
	Type0  goto 55
	Type0_5  goto 56
	Type1  goto 57
	Type2  goto 110
	Labeled_type2  goto 59
	Type_record  goto 111


state 88
	FType : LPAREN Type_record RPAREN .  (27)

	.  reduce 27


state 89
	Template : LBRACKET . ArgList RBRACKET  (46)

	IDENT  shift 112
	STRING  shift 113
	QUESTION  shift 114
	LBRACKET  shift 89
	LBRACE  shift 46
	TYINT  shift 47
	TYFLOAT  shift 48
	TYBOOL  shift 49
	TYCHAR  shift 50
	TYSTRING  shift 51
	WIDGET  shift 115
	OPTION  shift 53
	FUNCTION  shift 116
	.  error

	TypeName  goto 54
	Type0  goto 55
	Type0_5  goto 56
	Type1  goto 57
	Type2  goto 117
	Type  goto 118
	Arg  goto 119
	Template  goto 120
	ArgList  goto 121


state 90
	Command : Safe FUNCTION FType IDENT Template .  (57)

	.  reduce 57


state 91
	entry : VARIANT TYPE ParserArity TypeName LBRACE Constructors . RBRACE  (72)

	RBRACE  shift 122
	.  error


state 92
	Option : OPTION IDENT LPAREN . IDENT RPAREN Template  (60)

	IDENT  shift 123
	.  error


state 93
	Option : OPTION IDENT Template .  (59)

	.  reduce 59


state 94
	External : Safe EXTERNAL IDENT . STRING  (58)

	STRING  shift 124
	.  error


state 95
	Constructor : IDENT LPAREN . IDENT RPAREN Template  (48)

	IDENT  shift 125
	.  error


state 96
	Constructor : IDENT Template .  (47)

	.  reduce 47


state 97
	Constructors : Constructor Constructors .  (51)

	.  reduce 51


state 98
	entry : TYPE ParserArity TypeName LBRACE Constructors RBRACE .  (71)

	.  reduce 71


state 99
	entry : SUBTYPE ParserArity OPTION LPAREN IDENT RPAREN . LBRACE AbbrevConstructors RBRACE  (74)

	LBRACE  shift 126
	.  error


state 100
	entry : SUBTYPE ParserArity TypeName LPAREN IDENT RPAREN . LBRACE AbbrevConstructors RBRACE  (75)

	LBRACE  shift 127
	.  error


state 101
	Type2 : Type2 . LIST  (18)
	Labeled_type2 : IDENT COLON Type2 .  (20)

	LIST  shift 86
	RPAREN  reduce 20
	COMMA  reduce 20


state 102
	Type1 : LBRACE Type_list RBRACE .  (16)

	.  reduce 16


state 103
	Type_list : Type2 COMMA . Type_list  (21)

	IDENT  shift 22
	LBRACE  shift 46
	TYINT  shift 47
	TYFLOAT  shift 48
	TYBOOL  shift 49
	TYCHAR  shift 50
	TYSTRING  shift 51
	WIDGET  shift 52
	OPTION  shift 53
	.  error

	TypeName  goto 54
	Type0  goto 55
	Type0_5  goto 56
	Type1  goto 57
	Type_list  goto 128
	Type2  goto 79


state 104
	Type1 : WIDGET LPAREN IDENT . RPAREN  (13)

	RPAREN  shift 129
	.  error


state 105
	Type1 : OPTION LPAREN IDENT . RPAREN  (14)

	RPAREN  shift 130
	.  error


state 106
	Type1 : TypeName LPAREN IDENT . RPAREN  (12)

	RPAREN  shift 131
	.  error


state 107
	Type0 : TypeName .  (8)

	.  reduce 8


state 108
	Type0_5 : Type0 SLASH Type0 .  (9)

	.  reduce 9


state 109
	Type1 : Type1 AS STRING .  (15)

	.  reduce 15


state 110
	Type2 : Type2 . LIST  (18)
	Labeled_type2 : Type2 .  (19)

	LIST  shift 86
	RPAREN  reduce 19
	COMMA  reduce 19


state 111
	Type_record : Labeled_type2 COMMA Type_record .  (23)

	.  reduce 23


state 112
	TypeName : IDENT .  (1)
	Arg : IDENT . COLON Type  (34)

	COLON  shift 132
	LPAREN  reduce 1
	SEMICOLON  reduce 1
	RBRACKET  reduce 1
	RBRACE  reduce 1
	SLASH  reduce 1
	LIST  reduce 1
	AS  reduce 1


state 113
	Arg : STRING .  (32)

	.  reduce 32


state 114
	Arg : QUESTION . IDENT COLON LBRACKET SimpleArgList RBRACKET DefaultList  (35)
	Arg : QUESTION . WIDGET COLON LBRACKET SimpleArgList RBRACKET DefaultList  (36)
	Arg : QUESTION . IDENT COLON LBRACKET SimpleArgList RBRACKET  (37)
	Arg : QUESTION . WIDGET COLON LBRACKET SimpleArgList RBRACKET  (38)

	IDENT  shift 133
	WIDGET  shift 134
	.  error


115: shift/reduce conflict (shift 80, reduce 2) on LPAREN
state 115
	TypeName : WIDGET .  (2)
	Type1 : WIDGET . LPAREN IDENT RPAREN  (13)
	Arg : WIDGET . COLON Type  (39)

	LPAREN  shift 80
	COLON  shift 135
	SEMICOLON  reduce 2
	RBRACKET  reduce 2
	RBRACE  reduce 2
	SLASH  reduce 2
	LIST  reduce 2
	AS  reduce 2


state 116
	Type : FUNCTION . FType  (29)

	LPAREN  shift 28
	.  error

	FType  goto 136


state 117
	Type2 : Type2 . LIST  (18)
	Type : Type2 .  (28)

	LIST  shift 86
	SEMICOLON  reduce 28
	RBRACKET  reduce 28
	RBRACE  reduce 28


state 118
	Arg : Type .  (33)

	.  reduce 33


state 119
	ArgList : Arg . SEMICOLON ArgList  (43)
	ArgList : Arg .  (44)

	SEMICOLON  shift 137
	RBRACKET  reduce 44
	RBRACE  reduce 44


state 120
	Arg : Template .  (40)

	.  reduce 40


state 121
	Template : LBRACKET ArgList . RBRACKET  (46)

	RBRACKET  shift 138
	.  error


state 122
	entry : VARIANT TYPE ParserArity TypeName LBRACE Constructors RBRACE .  (72)

	.  reduce 72


state 123
	Option : OPTION IDENT LPAREN IDENT . RPAREN Template  (60)

	RPAREN  shift 139
	.  error


state 124
	External : Safe EXTERNAL IDENT STRING .  (58)

	.  reduce 58


state 125
	Constructor : IDENT LPAREN IDENT . RPAREN Template  (48)

	RPAREN  shift 140
	.  error


state 126
	entry : SUBTYPE ParserArity OPTION LPAREN IDENT RPAREN LBRACE . AbbrevConstructors RBRACE  (74)

	IDENT  shift 141
	.  error

	Constructor  goto 142
	AbbrevConstructor  goto 143
	AbbrevConstructors  goto 144


state 127
	entry : SUBTYPE ParserArity TypeName LPAREN IDENT RPAREN LBRACE . AbbrevConstructors RBRACE  (75)

	IDENT  shift 141
	.  error

	Constructor  goto 142
	AbbrevConstructor  goto 143
	AbbrevConstructors  goto 145


state 128
	Type_list : Type2 COMMA Type_list .  (21)

	.  reduce 21


state 129
	Type1 : WIDGET LPAREN IDENT RPAREN .  (13)

	.  reduce 13


state 130
	Type1 : OPTION LPAREN IDENT RPAREN .  (14)

	.  reduce 14


state 131
	Type1 : TypeName LPAREN IDENT RPAREN .  (12)

	.  reduce 12


state 132
	Arg : IDENT COLON . Type  (34)

	IDENT  shift 22
	LBRACE  shift 46
	TYINT  shift 47
	TYFLOAT  shift 48
	TYBOOL  shift 49
	TYCHAR  shift 50
	TYSTRING  shift 51
	WIDGET  shift 52
	OPTION  shift 53
	FUNCTION  shift 116
	.  error

	TypeName  goto 54
	Type0  goto 55
	Type0_5  goto 56
	Type1  goto 57
	Type2  goto 117
	Type  goto 146


state 133
	Arg : QUESTION IDENT . COLON LBRACKET SimpleArgList RBRACKET DefaultList  (35)
	Arg : QUESTION IDENT . COLON LBRACKET SimpleArgList RBRACKET  (37)

	COLON  shift 147
	.  error


state 134
	Arg : QUESTION WIDGET . COLON LBRACKET SimpleArgList RBRACKET DefaultList  (36)
	Arg : QUESTION WIDGET . COLON LBRACKET SimpleArgList RBRACKET  (38)

	COLON  shift 148
	.  error


state 135
	Arg : WIDGET COLON . Type  (39)

	IDENT  shift 22
	LBRACE  shift 46
	TYINT  shift 47
	TYFLOAT  shift 48
	TYBOOL  shift 49
	TYCHAR  shift 50
	TYSTRING  shift 51
	WIDGET  shift 52
	OPTION  shift 53
	FUNCTION  shift 116
	.  error

	TypeName  goto 54
	Type0  goto 55
	Type0_5  goto 56
	Type1  goto 57
	Type2  goto 117
	Type  goto 149


state 136
	Type : FUNCTION FType .  (29)

	.  reduce 29


state 137
	ArgList : Arg SEMICOLON . ArgList  (43)

	IDENT  shift 112
	STRING  shift 113
	QUESTION  shift 114
	LBRACKET  shift 89
	LBRACE  shift 46
	TYINT  shift 47
	TYFLOAT  shift 48
	TYBOOL  shift 49
	TYCHAR  shift 50
	TYSTRING  shift 51
	WIDGET  shift 115
	OPTION  shift 53
	FUNCTION  shift 116
	.  error

	TypeName  goto 54
	Type0  goto 55
	Type0_5  goto 56
	Type1  goto 57
	Type2  goto 117
	Type  goto 118
	Arg  goto 119
	Template  goto 120
	ArgList  goto 150


state 138
	Template : LBRACKET ArgList RBRACKET .  (46)

	.  reduce 46


state 139
	Option : OPTION IDENT LPAREN IDENT RPAREN . Template  (60)

	LBRACKET  shift 89
	.  error

	Template  goto 151


state 140
	Constructor : IDENT LPAREN IDENT RPAREN . Template  (48)

	LBRACKET  shift 89
	.  error

	Template  goto 152


state 141
	Constructor : IDENT . Template  (47)
	Constructor : IDENT . LPAREN IDENT RPAREN Template  (48)
	AbbrevConstructor : IDENT .  (50)

	LPAREN  shift 95
	LBRACKET  shift 89
	IDENT  reduce 50
	RBRACE  reduce 50

	Template  goto 96


state 142
	AbbrevConstructor : Constructor .  (49)

	.  reduce 49


state 143
	AbbrevConstructors : AbbrevConstructor . AbbrevConstructors  (53)
	AbbrevConstructors : AbbrevConstructor .  (54)

	IDENT  shift 141
	RBRACE  reduce 54

	Constructor  goto 142
	AbbrevConstructor  goto 143
	AbbrevConstructors  goto 153


state 144
	entry : SUBTYPE ParserArity OPTION LPAREN IDENT RPAREN LBRACE AbbrevConstructors . RBRACE  (74)

	RBRACE  shift 154
	.  error


state 145
	entry : SUBTYPE ParserArity TypeName LPAREN IDENT RPAREN LBRACE AbbrevConstructors . RBRACE  (75)

	RBRACE  shift 155
	.  error


state 146
	Arg : IDENT COLON Type .  (34)

	.  reduce 34


state 147
	Arg : QUESTION IDENT COLON . LBRACKET SimpleArgList RBRACKET DefaultList  (35)
	Arg : QUESTION IDENT COLON . LBRACKET SimpleArgList RBRACKET  (37)

	LBRACKET  shift 156
	.  error


state 148
	Arg : QUESTION WIDGET COLON . LBRACKET SimpleArgList RBRACKET DefaultList  (36)
	Arg : QUESTION WIDGET COLON . LBRACKET SimpleArgList RBRACKET  (38)

	LBRACKET  shift 157
	.  error


state 149
	Arg : WIDGET COLON Type .  (39)

	.  reduce 39


state 150
	ArgList : Arg SEMICOLON ArgList .  (43)

	.  reduce 43


state 151
	Option : OPTION IDENT LPAREN IDENT RPAREN Template .  (60)

	.  reduce 60


state 152
	Constructor : IDENT LPAREN IDENT RPAREN Template .  (48)

	.  reduce 48


state 153
	AbbrevConstructors : AbbrevConstructor AbbrevConstructors .  (53)

	.  reduce 53


state 154
	entry : SUBTYPE ParserArity OPTION LPAREN IDENT RPAREN LBRACE AbbrevConstructors RBRACE .  (74)

	.  reduce 74


state 155
	entry : SUBTYPE ParserArity TypeName LPAREN IDENT RPAREN LBRACE AbbrevConstructors RBRACE .  (75)

	.  reduce 75


state 156
	Arg : QUESTION IDENT COLON LBRACKET . SimpleArgList RBRACKET DefaultList  (35)
	Arg : QUESTION IDENT COLON LBRACKET . SimpleArgList RBRACKET  (37)

	IDENT  shift 22
	STRING  shift 158
	LBRACE  shift 46
	TYINT  shift 47
	TYFLOAT  shift 48
	TYBOOL  shift 49
	TYCHAR  shift 50
	TYSTRING  shift 51
	WIDGET  shift 52
	OPTION  shift 53
	FUNCTION  shift 116
	.  error
